# ace_engine_lite

./: .clang-format  .gitignore  BUILD.gn  CMakeLists.txt  README.md  README_zh.md  ace_lite.gni  bundle.json
frameworks/: BUILD.gn  CMakeLists.txt
frameworks/common/: BUILD.gn
frameworks/common/log/: ace_log.cpp  ace_log.h
frameworks/common/memory/: mem_proc.cpp  memory_heap.cpp
frameworks/common/memory/cache/: cache_manager.cpp  cache_manager.h
frameworks/include/base/: dft_impl.h  js_config.h  js_debugger_config.h  product_adapter.h
frameworks/include/context/: js_ability.h
frameworks/include/resource/: video_panel_image_res.h
frameworks/module_manager/: BUILD.gn  module_manager.cpp  module_manager.h  ohos_module_config.h
frameworks/module_manager/test/unittest/: BUILD.gn
frameworks/module_manager/test/unittest/common/: require_module_tdd_test.cpp  require_module_tdd_test.h
frameworks/native_engine/: BUILD.gn
frameworks/native_engine/async/: js_async_work.cpp  message_queue_utils.cpp
frameworks/native_engine/jsi/: jsi.cpp
frameworks/native_engine/jsi/internal/: jsi_internal.h
frameworks/src/core/animation/: transition_impl.cpp  transition_impl.h
frameworks/src/core/base/: ace_event_id.h  ace_lock.cpp  ace_lock.h  ace_log.cpp  ace_version.h  async_task_manager.cpp  async_task_manager.h  dft_impl.cpp  dfx_assist.cpp  event_util.cpp  event_util.h  js_debugger_config.cpp  js_fwk_common.cpp  js_fwk_common.h  key_parser.cpp  keys.h  lazy_load_manager.cpp  lazy_load_manager.h  lazy_load_watcher.cpp  lazy_load_watcher.h  locale_util.cpp  locale_util.h  mem_proc.cpp  number_parser.cpp  product_adapter.cpp  scope_js_value.h  string_util.cpp  string_util.h
frameworks/src/core/components/: analog_clock_component.cpp  camera_component.cpp  canvas_component.cpp  canvas_component.h  chart_component.cpp  chart_component.h  circle_progress_component.cpp  clock_hand_component.cpp  clock_hand_component.h  component.cpp  component.h  component_factory.h  div_component.cpp  (+34 more)
frameworks/targets/: BUILD.gn  platform_adapter.cpp
frameworks/targets/linux/: acelite_config.h
frameworks/targets/liteos_a/: acelite_config.h
frameworks/targets/liteos_m/: acelite_config.h
frameworks/targets/simulator/: BUILD.gn  acelite_config.h
src/core/base/: js_fwk_common.cpp  string_util.cpp
src/core/components/: clock_hand_component.cpp  event_listener.h  input_component.cpp  list_adapter.cpp
src/core/context/: js_app_context.cpp  js_app_context.h
test/: BUILD.gn  ace_test_config.gni
test/moduletest/common/: BUILD.gn  basic_tdd_test.cpp  basic_tdd_test.h
(+175 files in other folders)
